Adding configuration to use NativeWind

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "**/*.jsx",
     "types/**/*.d.ts",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
